feat: Added Terms of Service screen

--- a/.gitignore
+++ b/.gitignore
@@ -575,3 +575,5 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,python,django,node,react
+
+/app/src/main.zip
