feat: Updated resolution and orientation handling for ToS

--- a/.gitignore
+++ b/.gitignore
@@ -576,4 +576,5 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,python,django,node,react
 
-/app/src/main.zip
+*.zip
+*.rar
