--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.BackRecorder">
+            android:theme="@style/Theme.BackRecorder"
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
