--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ googleGoogleid = "1.1.1"
 playServicesAuth = "21.4.0"
 securityCrypto = "1.1.0"
 tinkAndroid = "1.12.0"
+wheelpickercompose = "1.1.11"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -57,6 +58,7 @@ androidx-browser = { group = "androidx.browser", name = "browser", version.ref =
 google-googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleGoogleid" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuth" }
 tink-android = { module = "com.google.crypto.tink:tink-android", version.ref = "tinkAndroid" }
+wheelpickercompose = { module = "com.github.commandiron:WheelPickerCompose", version.ref = "wheelpickercompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
